--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
+{{#if session.isAuthenticated}}
+  Logged in as {{session.currentUser.displayName}}
+  <button {{action "signOut"}}>Sign out</button>
+  {{outlet}}
+{{else}}
+  <button {{action "signIn" "github"}}>Sign in with GitHub</button>
+{{/if}}
 <h2 id="title">Track Your Time</h2>
 {{#timer-control}}
 {{/timer-control}}
