--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,27 @@
-{{#if session.isAuthenticated}}
-  Logged in as {{session.currentUser.displayName}}
-  <button {{action "signOut"}}>Sign out</button>
-  {{outlet}}
-{{else}}
-  <button {{action "signIn" "github"}}>Sign in with GitHub</button>
-{{/if}}
-<h2 id="title">Track Your Time</h2>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <a class="navbar-brand" href="#">Simply Time</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+  </ul>
+  {{#if session.isAuthenticated}}
+    Logged in as {{session.currentUser.displayName}}
+    <button {{action "signOut"}}>Sign out</button>
+    {{outlet}}
+  {{else}}
+    <button {{action "signIn" "github"}}>Sign in with GitHub</button>
+  {{/if}}
+</nav>
+
+<div class="container">
 {{#timer-control}}
 {{/timer-control}}
-{{outlet}}
+  {{outlet}}
+</div>
