--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,13 +2,7 @@
   <a class="navbar-brand" href="#">Simply Time</a>
   <ul class="nav nav-pills">
     <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      {{#link-to "clients"}}Clients{{/link-to}}
     </li>
   </ul>
   {{#if session.isAuthenticated}}
